# haskell-api-skeleton-postgres

./: LICENSE  README.md  rest-service-skeleton.cabal  stack.yaml
src/: Actions.hs  Config.hs  Main.hs  Models.hs  Router.hs  Test.hs  Types.hs
src/apps/: User.hs
src/apps/User/: Test.hs  User.hs
src/test/: TestUser.hs
test/: Spec.hs
