name:                rest-service-skeleton
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rest-service-skeleton#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Sterneberg
maintainer:          erik.sterneberg@gmail.com
copyright:           2017 Erik Sterneberg
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rest-service-skeleton
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  extensions:          OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                       , scotty
                       , aeson
                       , http-types
                       , text
                       , wai-extra
                       , wai
                       , bytestring
                       , monad-logger
                       , transformers
                       , persistent
                       , persistent-postgresql
                       , persistent-template
                       , resource-pool
                       , mtl
  other-modules:       Models
                       , Config

